<resources>
    <string name="app_name">OnlineRetailers</string>
    <string name="hello_world">hello world</string>
    <string name="bottom_title_home">主页</string>
    <string name="bottom_title_cart">购物车</string>
    <string name="bottom_title_mine">我的</string>
    <string name="search">search</string>
    <string name="搜索">搜索</string>
    <string name="客服">客服</string>
    <string name="收藏">收藏</string>
    <string name="购物车">购物车</string>
    <string name="加入购物车">加入购物车</string>
    <string name="立即购买">立即购买</string>
    <string name="_1199">¥1199</string>
    <string name="_1009">折后¥1009</string>
    <string name="配送区域">配送区域</string>
    <string name="网络类型">网络类型</string>
    <string name="_5g">5G全网通</string>
    <string name="套餐类型">套餐类型</string>
    <string name="官方标配">官方标配</string>
    <string name="购买数量">购买数量</string>
    <string name="_1">1</string>
    <string name="确定">确定</string>
    <string name="id">ID</string>
    <string name="个性签名">个性签名</string>
    <string name="待付款">待付款</string>
    <string name="待发货">待发货</string>
    <string name="待收货">待收货</string>
    <string name="历史订单">历史订单</string>
    <string name="我的零钱">我的零钱</string>
    <string name="我的收藏">我的收藏</string>
    <string name="设置">设置</string>
    <string name="原价">原价</string>
    <string name="现价">现价</string>
    <string name="商品名称">商品名称</string>
    <string name="参数">参数</string>
    <string name="内容详情">内容详情</string>
    <string name="name_phone_numbers">姓名 手机号码</string>
    <string name="地址">地址</string>
    <string name="name_time">名字与付款时间</string>
    <string name="配送方式">配送方式</string>
    <string name="快递">快递</string>
    <string name="订单备注">订单备注</string>
    <string name="request">请写下您的要求</string>
    <string name="支付方式">支付方式</string>
    <string name="零钱支付">零钱支付</string>
    <string name="提交订单">提交订单</string>
    <string name="移除购物车">移出购物车</string>
    <string name="全选">全选</string>
    <string name="用户名">用户名</string>
    <string name="密码">密码</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="请输入密码">请输入密码</string>
    <string name="请输入真实姓名">请输入真实姓名</string>
    <string name="请输入手机号码">请输入手机号码</string>
    <string name="注册完成">注册完成</string>
    <string name="充值金额">充值金额</string>
    <string name="请输入充值金额">请输入充值金额</string>
    <string name="确认充值">确认充值</string>
    <string name="商品单价">商品单价</string>
    <string name="姓名">姓名</string>
    <string name="手机号码">手机号码</string>
    <string name="付款时间">付款时间</string>
    <string name="付款金额">付款金额</string>
    <string name="总价">总价</string>
    <string name="总价_">总价:</string>
    <string name="支付">支付</string>
    <string name="刷新">刷新</string>
    <string name="收藏时间">收藏时间</string>
    <string name="切换账号">切换账号</string>
</resources>