<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@color/grey"
    android:orientation="vertical">



        <TextView
            android:id="@+id/mine_historical_shoppingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/商品名称"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/yellow"/>

        <TextView
            android:id="@+id/mine_historical_shoppingCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/购买数量"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/yellow"/>



    <TextView
        android:id="@+id/mine_historical_purchaseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/付款时间"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/yellow"/>

    <TextView
        android:id="@+id/mine_historical_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/付款金额"/>

</LinearLayout>