<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="175dp"
        android:layout_height="164dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/_1"
        android:scaleType="centerCrop"
        android:src="@drawable/taobao" />

    <EditText
        android:id="@+id/small_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="1"
        android:hint="@string/请输入充值金额"
        android:inputType="number" />

    <Button
        android:id="@+id/small_change_make_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/确认充值"
        android:textSize="15sp" />

</LinearLayout>