<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/login_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/_1"
        android:scaleType="centerCrop"
        android:src="@drawable/taobao" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="338dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="1"
            android:hint="@string/用户名"
            android:maxLength="25"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/密码"
            android:maxLength="25"
            android:autofillHints="1"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/登录" />




    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/注册"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>