<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <include layout="@layout/mine_information_summary" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/mine_small_change"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/我的零钱"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/smallChange_Refresh"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/刷新"/>

    </LinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/mine_collection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/我的收藏"
            android:textSize="20sp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/mine_historical_orders"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/历史订单"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/mine_set_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/设置"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


</LinearLayout>