<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/purchase_page_image"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bai_lu"
            android:contentDescription="@string/_1" />

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/purchase_page_username"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/用户名"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/purchase_page_purchaseShoppingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxLines="3"
                android:text="@string/商品名称"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/purchase_page_purchaseTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:maxLines="3"
                android:textSize="20sp"
                android:text="@string/付款时间"/>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/购买数量"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/purchase_page_purchaseCount"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/_1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/付款金额"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/purchase_page_purchaseAmount"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/付款金额"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/配送方式"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/快递"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/订单备注"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <EditText
            android:id="@+id/purchase_page_purchaseOrderInformation"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:maxLines="5"
            android:background="@color/white"
            android:hint="@string/request"
            android:autofillHints="1"
            android:inputType="text" />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

</LinearLayout>