<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="59dp"
        android:contentDescription="@string/_1"
        android:scaleType="centerCrop"
        android:src="@drawable/taobao" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="1"
            android:hint="@string/请输入用户名"
            android:maxLength="25"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/register_username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/请输入密码"
            android:maxLength="25"
            android:autofillHints="1"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/register_password"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/请输入真实姓名"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:autofillHints="1"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/register_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/请输入手机号码"
            android:inputType="number"
            android:maxLength="25"
            android:autofillHints="1"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/注册完成"/>

</RelativeLayout>