<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="80dp">

    <TextView
        android:id="@+id/detail_goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/商品名称"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_goods_origin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/原价"/>

        <TextView
            android:id="@+id/detail_goods_present_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_price_circular"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/现价"/>
    </LinearLayout>



</LinearLayout>