<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/purchase_page_place"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_baseline_place_24"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/purchase_page_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/姓名"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/purchase_page_phone_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/手机号码" />

        <TextView
            android:id="@+id/purchase_page_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/地址"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="3"/>

    </LinearLayout>

</LinearLayout>