<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/detail_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/detail_banner"
                android:layout_width="match_parent"
                android:layout_height="450dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey" />

            <include layout="@layout/detail_goods_price" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/detail_goods_specification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:text="@string/参数"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_margin="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/内容详情"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/detail_kf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/客服"
            android:textColor="@color/detail_bottom_selector"
            app:drawableTint="@color/detail_bottom_selector"
            app:drawableTopCompat="@drawable/ic_baseline_kf_24" />

        <TextView
            android:id="@+id/detail_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/black"
            android:text="@string/收藏"
            android:textColor="@color/detail_bottom_selector"
            app:drawableTint="@color/detail_bottom_selector"
            app:drawableTopCompat="@drawable/ic_baseline_collection" />

        <TextView
            android:id="@+id/detail_shoppingCar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/购物车"
            android:textColor="@color/detail_bottom_selector"
            app:drawableTint="@color/detail_bottom_selector"
            app:drawableTopCompat="@drawable/ic_baseline_shopping_cart_24" />

        <TextView
            android:id="@+id/detail_add_to_shoppingCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/little_yellow"
            android:gravity="center"
            android:text="@string/加入购物车"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail_buy_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/立即购买"
            android:textColor="@color/white" />


    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="商品详情"
        app:titleTextColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>